--- a/app.json
+++ b/app.json
@@ -9,13 +9,15 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "navigationBarColor": "transparent"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "navigationBarColor": "transparent"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +38,9 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "navigationBar": {
+      "visible": "hidden"
     }
   }
 }
